Readding z-index helper (fixing header-nav)

--- a/source/styles/utility/_helpers.scss
+++ b/source/styles/utility/_helpers.scss
@@ -61,3 +61,20 @@
       + "Please make sure it is defined in `$breakpoints` map.";
   }
 }
+
+
+
+//
+// Functions
+//
+
+// By Hugo Giraudel - http://www.sitepoint.com/using-sass-maps/
+
+@function z($key) {
+  @if map-has-key($z-layers, $key) {
+    @return map-get($z-layers, $key);
+  }
+
+  @warn "Unknown `#{$key}` in $z-layers.";
+  @return null;
+}
